@@ -11,6 +11,7 @@
           aggregation compilations
 
     WATO
+    * Added "profile" option to be configurable via browser
     * FIX: It is now possible to create clusters in empty folders
     * FIX: Fixed problem with complaining empty ListOf() valuespecs
 
